@@ -41,5 +41,10 @@
     <input type="radio" class="radio" value="radio 1">
     <input type="radio" class="radio" value="radio 2">
     <input type="radio" class="radio" value="radio 3">
+    
+    <div class="div">Div 1</div>
+    <div class="div">Div 2</div>
+    <div class="div">Div 3</div>
+
   </body>
 </html>
