@@ -59,5 +59,12 @@ Feature: Multi Elements
     And the value of radio button 2 should be "radio 2"
     And the value of radio button 3 should be "radio 3"
 
+  Scenario: Selecting divs
+    When I select the div with class "div"
+    Then I should have 3 divs
+    And the text of div 1 should be "Div 1"
+    And the text of div 2 should be "Div 2"
+    And the text of div 3 should be "Div 3"
+
 
 
