@@ -104,3 +104,16 @@ Then /^the value of radio button (\d+) should be "([^\"]*)"$/ do |radio_button_n
   @elements[radio_button_num.to_i - 1].value.should == value
 end
 
+When /^I select the div with class "([^\"]*)"$/ do |class_name|
+  @elements = @page.div_elements(:class => class_name)
+end
+
+Then /^I should have (\d+) divs$/ do |num_divs|
+  @elements.size.should == num_divs.to_i
+end
+
+Then /^the text of div (\d+) should be "([^\"]*)"$/ do |div_num, text|
+  @elements[div_num.to_i - 1].text.should == text
+end
+
+
