@@ -429,6 +429,13 @@ module PageObject
         end
 
         #
+        # platform method to retrieve all div elements
+        #
+        def divs_for(identifier)
+          find_selenium_elements(identifier, Elements::Div, 'div')
+        end
+
+        #
         # platform method to return the text for a span
         # See PageObject::Accessors#span
         #
